# DocklyOCR

./: .env.example  .gitignore  Dockerfile  NEXT_STEPS.md  OCR-API-Projekt-Anforderungen.md  README.md  SCALEWAY_SETUP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: auth.py  config.py  db.py  http_utils.py  main.py  middleware.py  models.py  schemas.py
app/routers/: admin.py  jobs.py  ocr.py
app/services/: cleanup.py  document_router.py  entity_extractor.py  formatters.py  gpu_manager.py  html_preview.py  ocr_pipeline.py  ocr_runner.py  opendataloader_pipeline.py  storage.py  webhook.py
app/templates/: base.html
app/templates/admin/: _jobs_table.html  _key_modal.html  _keys_table.html  _status_dot.html  customer_detail.html  customers_list.html  dashboard.html  jobs_list.html  login.html
app/workers/: ocr_worker.py
docs/: WERTERKENNUNG.md
docs/superpowers/plans/: 2026-04-16-pipeline-v5.md
docs/superpowers/specs/: 2026-04-15-docklyocr-implementation-design.md  (+1 more)
scripts/: cleanup_old_results.py  hash_password.py  init_db.py
scripts/scaleway-deploy/: auto-shutdown.sh  dockly-auto-shutdown.service  dockly-auto-shutdown.timer  setup-gpu.sh  start-gpu.py
tests/: conftest.py  test_admin.py  test_auth.py  test_cleanup.py  test_document_router.py  test_e2e.py  test_entity_extractor.py  test_formatters.py  test_gpu_manager.py  test_html_preview.py  test_jobs_endpoint.py  test_middleware.py  test_models.py  test_ocr_endpoint.py  test_opendataloader_pipeline.py  test_pipeline.py  test_storage.py  test_webhook.py
