[project]
name = "dockly-ocr"
version = "0.1.0"
description = "Self-hosted OCR API powered by Qwen2.5-VL via vLLM with multi-strategy fallback pipeline"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "Hylab", email = "hi@hylab.de"},
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "arq>=0.26",
    "redis>=5.0",
    "pillow>=10.0",
    "httpx>=0.27",
    "requests>=2.31",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "jinja2>=3.1",
    "pydantic-settings>=2.0",
    "python-json-logger>=2.0",
    "itsdangerous>=2.1",
    "numpy>=1.24",
    "opendataloader-pdf>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
]
